# UBB-Y3S2

AndroidThings/CollectiveProject/Android_Things_App/app/: README.md  build.gradle  google-services.json
AndroidThings/CollectiveProject/Android_Things_App/gradle/wrapper/: gradle-wrapper.properties
AndroidThings/CollectiveProject/Arduino/: script.ino
AndroidThings/CollectiveProject/script/: script.ino
AndroidThings/CollectiveProject/wuebui/: README.md  package-lock.json  package.json
AndroidThings/CollectiveProject/wuebui/public/: index.html
AndroidThings/CollectiveProject/wuebui/src/: App.vue  main.js
AndroidThings/IndividualProject/: readme.md
AndroidThings/IndividualProject/AndroidThings/: README.md  arduinoLedCode.ino  script.py
AndroidThings/IndividualProject/Arduino/: arduinoLedCode.ino
ImageProcessing/WatershedProject/: CMakeLists.txt  main.cpp
ImageProcessing/WatershedProject/Filters/: BitExtraction.h  ColorFilterL1.h  Contour.h  Dilation.h  Erosion.h  FilterInterface.h  HighPassFilter.h  NegativeOfImage.h  RGBtoHSL.h  Skeleton.h  SmoothingMedianFilter.h  Thinning.h  Translation.h  TranslationInvariance.h  WaterShedFilter.h  WindowOperation.h
ImageProcessing/WatershedProject/UI/: mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
ImageProcessing/WatershedProject/Utils/: Utils.h
ImageProcessing/WatershedProjectQT_UI/: WatershedProjectQT_UI.pro  mainwindow.ui
ImageProcessing/build-WatershedProjectQT_UI-Desktop_Qt_5_12_0_clang_64bit-Debug/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h
ImageProcessing/build-WatershedProjectQT_UI-Desktop_Qt_5_12_0_clang_64bit-Debug/WatershedProjectQT_UI.app/Contents/: Info.plist
Numerical Analysys/Lab 1/: HW.m
Numerical Analysys/Lab1/: HW.m
Numerical Analysys/Lab10/: gauss.m  prob1.m
Numerical Analysys/Lab11/: pb1.m  pb2.m  solvePb1.m  solvePb2.m
Numerical Analysys/Lab2/: 1.m  2_v1.m  exFive.m  exFour.m  exThree.m  exTwo.m
Numerical Analysys/Lab3/: ExOne.m  ExThree.m  ExTwo.m
Numerical Analysys/Lab4/: ExOne.m  ExThree.m  ExTwo.m  div_diff_table.m  newtonInterpolation.m
Numerical Analysys/Lab5/: hermite.m  hermite_table.m  p1.m  p2.m  p3.m
Numerical Analysys/Lab6/: p1.m  p2.m  p3.m  p4.m
Numerical Analysys/Lab7/: RepeatedSimpson.m  TrapeziumDouble.m  pb1.m  pb2.m  pb3.m  pb4.m  pb5.m  pb6.m
Numerical Analysys/Lab9/: matlab.mat  p1.m  p2.m  p3.m  p4.m
Numerical Analysys/lab8/: RepeatedTrapezium.m  adaptiveQuad.m  p1.m  p2.m  p3.m  rectangleQuad.m  repeatedRectangle.m  romberg.m  rombergAitken.m  simpson.m
Y3S2-Testing/GO_API/: main.go
Y3S2-Testing/Lab 2/: pom.xml
Y3S2-Testing/Lab 2/fisiere/: Note.xml  Studenti.xml  Teme.xml  a.txt
Y3S2-Testing/Lab 2/src/service/: TestService.java
Y3S2-Testing/Lab1/Solutions/: Design.xls  Project_AnalysisDesignDocument_Solved.pages  Project_RequirementsDocument_Solved.pages
Y3S2-Testing/Lab1/Solutions/Lab1_IC_935_NazarieCiprianAlexandru_MirceaSorinSebastian/: FeatureListFeatureTourTesting.docx  ReviewFormForRequirementsInpection.xls
Y3S2-Testing/Lab2_Last/: pom.xml
Y3S2-Testing/Lab3/: Lab02_BBT_Form.numbers  Lab02_BBT_Form.xlsx
Y3S2-Testing/LabTestingJenkins/: Nota.txt  NotaXML.xml  NoteStudenti.txt  StudentiXML.xml  TemaLaborator.txt  TemaLaboratorXML.xml  XMLStdTests.xml  pom.xml  studenti.txt  testStdService
Y3S2-Testing/LabTestingJenkins/src/main/java/: Main.java  (+1 more)
Y3S2-Testing/WebTesting/: pom.xml  serenity.properties
Y3S2-Testing/WebTestingTzwai/: pom.xml  serenity.properties
Y3S2-Testing/uitesting/: .angular-cli.json  README.md  package-lock.json  package.json
Y3S2-Testing/uitesting/e2e/: app.e2e-spec.ts
Y3S2-Testing/uitesting/src/: index.html
Y3S2-Testing/uitesting/src/app/: app.component.html  app.component.ts  app.module.ts  data.service.ts  to-string.pipe.ts
(+68 files in other folders)
